@@ -14,8 +14,14 @@ import os, sys
 # scons is for quick recompile, so SIMUPOP_REV and SIMUPOP_VER IS NOT CHANGED
 # so a re-compliaction is not needed after a svn commit.
 #
-pythonPaths = ['/home/bpeng/PythonDebug/include/python2.4/', '..']
-#pythonPaths = ['/usr/include/python2.3/', '/usr/local/python-2.3.3/include/python2.3', '..']
+debug = False
+if debug and os.path.isdir('/home/bpeng/PythonDebug/'): # debug mode
+    pythonPaths = ['/home/bpeng/PythonDebug/include/python2.4/', '..']
+    flags = ['-DPy_REF_DEBUG']
+else:
+    pythonPaths = ['/usr/include/python2.3/', '/usr/local/python-2.3.3/include/python2.3', '..']
+    flags = []
+
 dest_dir = r'/home/bpeng/PythonModules/lib64/python2.3/site-packages/'
 share_dir = r'/home/bpeng/PythonModules/share/simuPOP'
 
@@ -23,7 +29,7 @@ env = Environment(ENV={'PATH':os.environ['PATH']})
 env.Append(CPPPATH = pythonPaths)
 
 env.Append(CCFLAGS = ['-Wall', '-pthread', '-fno-strict-aliasing', '-DNDEBUG', '-O3', '-fPIC', \
-    '-DSIMUPOP_REV=9990', '-DSIMUPOP_VER=9.9.9' ])
+    '-DSIMUPOP_REV=9990', '-DSIMUPOP_VER=9.9.9' ] + flags)
 #    '-DSIMUPOP_REV=%s' % os.popen('svnversion ..').read().strip() ])
 
 # for swig 1.3.28 cvs
